--- a/views/dashboard/categories.ejs
+++ b/views/dashboard/categories.ejs
@@ -2,7 +2,13 @@
 
 <div class="row justify-content-center">
   <div class="col-md-6">
-    
+    <% if (hasInfo) { %>
+      <% for (var prop in messages) {%>
+        <div class="alert alert-warning">
+          <%- messages[prop] %>
+        </div>
+      <% } %>
+    <% } %>
     
     <table class="table">
       <thead>
@@ -18,7 +24,7 @@
             <td class="align-middle"><%- categories[prop].name %></td>
             <td><input type="text" class="form-control form-control-sm" value="<%- categories[prop].path %>"></td>
             <td class="align-middle">
-              <form method="POST">
+              <form action="/dashboard/categories/delete/<%- prop %>" method="POST">
                 <button type="submit" class="btn btn-outline-danger btn-sm">刪除</button>
               </form>
             </td>
