--- a/views/dashboard/archives.ejs
+++ b/views/dashboard/archives.ejs
@@ -7,39 +7,42 @@
     
 
     <div class="btn-group w-100">
-      <a href="#" class="btn btn-outline-secondary w-100 rounded-0 active">已發佈</a>
-      <a href="#" class="btn btn-outline-secondary w-100 rounded-0 ">草稿</a>
+      <a href="/dashboard/archives?status=public" class="btn btn-outline-secondary w-100 rounded-0 <% if (status === 'public') { %> active <% } %> ">已發佈</a>
+      <a href="/dashboard/archives?status=draft" class="btn btn-outline-secondary w-100 rounded-0 <% if (status === 'draft') { %> active <% } %> ">草稿</a>
       <a href="article.html" class="btn btn-primary">新增文章</a>
     </div>
 
-    
+    <% for (var prop in articles) { %>
       <div class="card my-3">
         <h4 class="card-header">
-          補充課程：Sass 與 includePaths
+          <%- articles[prop].title %>
         </h4>
         <div class="card-body">
-          [程式][PHP] HTML 表單(Form)以陣列(Array)方式傳遞&lt;input&nbsp;type=&#39;text&#39;&gt;資訊。 什麼時候會用到這樣的方法，我無法明確表達，可能要靠你自己想像。 我遇到的狀況是要讓user不斷的新增商品與價格。 第一種做法：&nbsp;.....
+          <%- stringtags(articles[prop].content).slice(0, 150) %>...
           <div>
             <span class="fa fa-clock-o"></span> 
-            2018/01/04
+            <%- moment(articles[prop].update_time * 1000).format('YYYY/MM/DD') %>
             ,
             <span class="fa fa-folder-open-o"></span>
             <span>
-              
-                沒有分類
-              
+              <% for (var item in categories) { %>
+                <% if (item === articles[prop].category) { %>
+                  <%- categories[item].name %>
+                <% } %>
+              <% } %>
             </span>
           </div>
         </div>
         <div class="card-footer p-0 btn-group">
-          <a href="#" class="btn btn-outline-danger rounded-0 deletePost" data-id="-L1zrsyiWCAbMQ5x8Plk" data-title="補充課程：Sass 與 includePaths">刪除</a>
+          <a href="#" class="btn btn-outline-danger rounded-0 deletePost" data-id="<%- articles[prop].id %>" data-title="<%- articles[prop].title %>">刪除</a>
           <a href="#" class="btn btn-outline-secondary w-100 rounded-0">編輯</a>
           
           <a href="#" target="_blank" class="btn btn-outline-secondary w-100 rounded-0">預覽</a>
           
         </div>
       </div>
-    
+    <% } %>
+
   </div>
 </div>
 
@@ -67,3 +70,22 @@
     </li>
   </ul>
 </nav>
+
+<script>
+  $(document).ready(function() {
+    $('.deletePost').on('click', function(e) {
+      e.preventDefault();
+      const id = $(this).data('id');
+      const title = $(this).data('title');
+      if (confirm('確認是否刪除 ' + title)) {
+        $.ajax({
+          url: `/dashboard/archives/delete/${id}`,
+          method: 'POST'
+        }).done(function(respons) {
+          console.log(respons);
+          window.location = '/dashboard/archives';
+        });
+      };
+    });
+  });
+</script>
