--- a/views/dashboard/archives.ejs
+++ b/views/dashboard/archives.ejs
@@ -25,10 +25,10 @@
             ,
             <span class="fa fa-folder-open-o"></span>
             <span>
-              <% for (var item in categories) { %>
-                <% if (item === articles[prop].category) { %>
-                  <%- categories[item].name %>
-                <% } %>
+              <% if (categories.hasOwnProperty(articles[prop].category)) { %>
+                <%= categories[articles[prop].category].name %>
+              <% } else { %>
+                沒有分類
               <% } %>
             </span>
           </div>
@@ -46,30 +46,7 @@
   </div>
 </div>
 
-
-<nav class="my-5" aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="/dashboard/archives" tabindex="-1">Previous</a>
-    </li>
-    
-      <li class="page-item active"> 
-        <a class="page-link" href="/dashboard/archives">
-          1
-        </a>
-      </li>
-    
-      <li class="page-item "> 
-        <a class="page-link" href="/dashboard/archives">
-          2
-        </a>
-      </li>
-    
-    <li class="page-item ">
-      <a class="page-link" href="/dashboard/archives">Next</a>
-    </li>
-  </ul>
-</nav>
+<%- include('../partials/pagenation.ejs') %>
 
 <script>
   $(document).ready(function() {
