--- a/views/dashboard/signup.ejs
+++ b/views/dashboard/signup.ejs
@@ -2,29 +2,61 @@
 
 <div class="row justify-content-center">
   <div class="col-sm-6">
+    
+    <div class="btn-group w-100 mb-3">
+      <a href="/auth?mode=signin" class="btn btn-outline-secondary w-100 rounded-0 <% if (mode === 'signin' ) { %>active<% } %>">登入</a>
+      <a href="/auth?mode=signup" class="btn btn-outline-secondary w-100 rounded-0 <% if (mode === 'signup' ) { %>active<% } %>">註冊</a>
+    </div>
 
-    <form method="POST" action="/auth/signup">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="請輸入 email"
-          required>
-        <small id="emailHelp" class="form-text text-muted">我們不會隨意散佈你的 Email</small>
-      </div>
-      <div class="form-group">
-        <label for="password">密碼</label>
-        <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼" required>
-      </div>
-      <div class="form-group">
-        <label for="confirm_password">確認密碼</label>
-        <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="確認密碼" required>
-      </div>
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="confirm" required>
-        <label class="form-check-label" for="confirm">請確認你了解這是自己做的 Blog</label>
-      </div>
-      <div class="text-right mt-3">
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
-    </form>
+    <!-- Signup Block -->
+    <% if (mode === 'signup') { %>
+      <form method="POST" action="/auth/signup">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="請輸入 email"
+            required>
+          <small id="emailHelp" class="form-text text-muted">我們不會隨意散佈你的 Email</small>
+        </div>
+        <div class="form-group">
+          <label for="password">密碼</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼 (最少六個字元) " required>
+        </div>
+        <div class="form-group">
+          <label for="confirm_password">確認密碼</label>
+          <input type="password" class="form-control" id="confirm_password" name="confirmPassword" placeholder="確認密碼" required>
+        </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="confirm" required>
+          <label class="form-check-label" for="confirm">請確認你了解這是自己做的 Blog</label>
+        </div>
+        <div class="text-right mt-3">
+          <button type="submit" class="btn btn-primary">送出</button>
+        </div>
+      </form>
+    <% } %>
+    <!-- Signup Block -->
+    <% if (mode === 'signin') { %>
+      <form method="POST" action="/auth/signin">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="請輸入 email"
+            required>
+        </div>
+        <div class="form-group">
+          <label for="password">密碼</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼" required>
+        </div>
+        <div class="text-right mt-3">
+          <button type="submit" class="btn btn-primary">登入</button>
+        </div>
+      </form>
+    <% } %>
+
+    <% if (hasError) { %>
+      <% for (var prop in message) { %>
+        <div class="alert alert-warning mt-3"><%- message[prop] %></div>
+      <% } %>
+    <% } %>
+
   </div>
 </div>
