--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,11 @@
           <div class="d-flex flex-row text-secondary small">
             <div class="p-2"><span class="fa fa-clock-o"></span><%- moment(articles[prop].update_time * 1000).format('YYYY/MM/DD') %></div>
             <div class="p-2"><i class="fa fa-tag" aria-hidden="true"></i> 
-              <a href="#" class="text-info">
                 <% if (categories.hasOwnProperty(articles[prop].category)) { %>
-                  <%= categories[articles[prop].category].name %>
+                  <a href="/archives/<%- categories[articles[prop].category].path %>" class="text-info"><%= categories[articles[prop].category].name %></a>
                 <% } else { %>
-                  沒有分類
+                  <a href="#" class="text-info">沒有分類</a>
                 <% } %>
-              </a>
             </div>
           </div>
           <div>
